<resources>

    <!-- Common begin  -->
    <string name="app_name">CST2335 Final Project</string>
    <string name="first">Sunrise/Sunset</string>
    <string name="second">Recipe</string>
    <string name="third">Dictionary</string>
    <string name="forth">Deezer Song</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="question">Question: </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error: </string>
    <string name="undo">Undo</string>
    <string name="deleted_message">You deleted record #</string>
    <string name="want_to_delete">Do you want to delete this term: </string>
    <string name="back">Back Home</string>
    <!-- Common end  -->
...
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="hint">Find a recipe or ingredient</string>
    <string name="saveBtn">Save</string>
    <string name="retrieveBtn">Retrieve</string>
    <string name="favorite_recipes">Favourite Recipes</string>
    <string name="enter_search_term">Please enter a search term.</string>
    <string name="error_fetch_data">Error fetching data. Please try again later.</string>
    <string name="error_occurred">An error occurred. Please try again.</string>
    <string name="recipe_deleted">Recipe "%1$s" deleted</string>
    <string name="help_info">Help information not available.</string>
    <string name="recipe_search_info_title">Recipe_Search_API_Instruction</string>
    <string name="remove_favorite">remove</string>
    <string name="favoriteadded">Favorite Recipe</string>

    <string name="help_title">Recipe search user guidance</string>
    <string name="author">Kelly Wu</string>
    <string name="date">March 30, 2024</string>
    <string name="recipe_help">Instruction: \1. the saved recipe will be displayed in recycler view\2. click search button to do recipe search\3. save button to save recipe as favourite\4. go back button to return to the previous page</string>
    <string name="welcome_message">Discover your new favourite recipe</string>
    <string name="alreadyexisted">This recipe is already existed in the favourite list</string>
    <string name="addedMessage">You added this recipe to the favourite list</string>

    <string name="deleteConfirm">You deleted this recipe</string>
    <string name="dataName">database name</string>
...
    <string name="tryagain">Please try again....</string>
    <string name="receip_not_found">Recipe not founded</string>
    <string name="search_key">Please enter search key words for your recipe list\n</string>
    <string name="recipe_title">Search the recipe you want to cook</string>
    <string name="fail">Failed to get data from website</string>
    <string name="addsuccess">Added successfully</string>
    <string name="addFavorite">Likes</string>
    <string name="textView">textView</string>
    <string name="rSummary">summary</string>
    <string name="urltext">website</string>
    <string name="remove">remove</string>
    <string name="confirmdelete">recipe deleted</string>
    <!--SunLookup App end  Yue Shang -->
...
