...
    <item
        android:id="@+id/first_id"
        android:title="@string/first"
        />

    <item
        android:id="@+id/second_id"
        android:title="@string/second" />

    <item
        android:id="@+id/third_id"
        android:title="@string/third" />

...
